auth and user service draft implementation
